--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,7 @@ jobs:
   run-automated-tests:
     runs-on: ubuntu-latest
     steps: 
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-dev-environment
       - name: Run automated tests 
         run: deno test
@@ -13,6 +14,7 @@ jobs:
   test-script-can-compile: 
     runs-on: ubuntu-latest
     steps: 
+      - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-dev-environment
       - name: Compile script into a macOS m1 binary 
         run: deno compile --allow-all --target aarch64-apple-darwin binny.ts
