--- a/.github/workflows/deploy-binary.yml
+++ b/.github/workflows/deploy-binary.yml
@@ -17,10 +17,8 @@ jobs:
       contents: write # to be able to push git tags and create github releases
     steps: 
       - uses: actions/checkout@v4
-      - uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.x
-
+      - uses: ./.github/actions/setup-dev-environment
+    
       - name: Compile script into a macOS m1 binary 
         run: |
           deno compile --allow-all --target aarch64-apple-darwin binny.ts
