--- a/binny-tools.yml
+++ b/binny-tools.yml
@@ -1,5 +1,5 @@
 # Config file used for testing the tool. Create your own config file for your project and the tools that it needs. 
-- name: sourcery
-  version: 2.0.3
-  downloadUrl: https://github.com/krzysztofzablocki/Sourcery/releases/download/{version}/sourcery-{version}.zip
-  pathToBinaryInsideZip: "bin/sourcery"
+- name: swiftlint
+  version: 0.52.4
+  downloadUrl: https://github.com/realm/SwiftLint/releases/download/{version}/portable_swiftlint.zip
+  pathToBinaryInsideZip: "swiftlint"
