tests: setup project with e2e tests (#8)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,17 +4,22 @@ on: [pull_request]
 
 jobs: 
   run-automated-tests:
-    runs-on: ubuntu-latest
+    # Because our team uses macos for our development environment, we run e2e tests also on a mac to feel more confident it will work for us. 
+    runs-on: macos-latest 
     steps: 
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-dev-environment
       - name: Run automated tests 
-        run: deno test
+        run: deno test --allow-all # provide all permissions to the test script because it modifies file system to prepare for e2e tests. 
 
-  test-script-can-compile: 
+  test-script-compiles-and-runs: 
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-dev-environment
       - name: Compile script into a macOS m1 binary 
-        run: deno compile --allow-all --target aarch64-apple-darwin binny.ts
+        run: |
+          deno compile --allow-all binny.ts
+          chmod +x binny
+      - name: Run the script and expect not to error 
+        run: ./binny swiftlint --version # expect command to run and not throw error 
