--- a/.github/actions/setup-dev-environment/action.yml
+++ b/.github/actions/setup-dev-environment/action.yml
@@ -4,6 +4,6 @@ description: Setup runner to be able to use deno.
 runs:
   using: "composite"
   steps:
-  - uses: denoland/setup-deno@v1
+  - uses: denoland/setup-deno@11b63cf76cfcafb4e43f97b6cad24d8e8438f62d # v1.5.2
     with:
       deno-version: v1.x
